<resources>
    <string name="app_name">GithubUser\'s</string>
    <string name="title_activity_detail_user">Detail User</string>

    <string name="Title">Title</string>
    <string name="company">Company</string>
    <string name="location">Location</string>
    <string name="repository">Repository</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="favorite">Favorite</string>
    <string name="menu_favorite">favorite</string>
    <string name="home">Home</string>
    <string name="message_undo">Batalkan menghapus item sebelumnya?</string>
    <string name="message_ok">OK</string>
    <string name="share_text">Segera follow %s</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="button_share">Button Share</string>
</resources>